--- a/angular-video-course/src/app/core/courses-page/courses-page.component.html
+++ b/angular-video-course/src/app/core/courses-page/courses-page.component.html
@@ -1,1 +1,11 @@
-<p>courses-page works!</p>
+<div *ngFor="let course of courses">
+  <h3>{{ course.title }}</h3>
+  <h4>
+    <span>{{ course.duration }}</span>
+    &nbsp;
+    <span>{{ course.creationDate  | date: 'mediumDate'}}</span>
+  </h4>
+  <p>
+    {{ course.description }}
+  </p>
+</div>
