--- a/angular-video-course/src/app/core/header/user-login/user-login.component.html
+++ b/angular-video-course/src/app/core/header/user-login/user-login.component.html
@@ -1,1 +1,2 @@
-<span>{{ users[1].firstName }} {{ users[1].lastName }}</span>
+<span>{{ users[1].firstName }} {{ users[1].lastName }}</span>&nbsp;
+<button>Log off</button>
