test: tests for all components
added tests for cover all components

--- a/angular-video-course/src/app/core/courses-page/courses-page.component.html
+++ b/angular-video-course/src/app/core/courses-page/courses-page.component.html
@@ -2,5 +2,5 @@
 <div class="add-course-button-box">
   <button>Add course</button>
 </div>
-<vc-course (onDelete)="onDelete($event)" *ngFor="let course of courses" [course]="course"></vc-course>
+<vc-course (deleteCourse)="onDelete($event)" *ngFor="let course of courses" [course]="course"></vc-course>
 
