--- a/angular-video-course/src/app/core/courses-page/course/course.component.html
+++ b/angular-video-course/src/app/core/courses-page/course/course.component.html
@@ -1,5 +1,5 @@
 <div class="course-box">
-  <h3>{{ course.title }}</h3>
+  <h3>{{ course.titleOfCourse }}</h3>
   <h4>
     <span>{{ course.duration }}</span>
     &nbsp;
@@ -10,6 +10,6 @@
   </p>
   <div class="buttons-box">
     <button>Edit</button>
-    <button (click)="delete()">Delete</button>
+    <button class="btn-course-delete" (click)="delete()">Delete</button>
   </div>
 </div>
