--- a/angular-video-course/src/app/core/courses-page/search/search.component.html
+++ b/angular-video-course/src/app/core/courses-page/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="search-box">
   <input type="text" [(ngModel)]="courseName">
-  <button (click)="find()">Search</button>
+  <button class="btn-search-find" (click)="find()">Search</button>
 </div>
