test: tests for components are updated
List of updates:
- a linter to keep code blocks consistent was set up
- the data-test-id marker was added
- CUSTOM_ELEMENTS_SCHEMA was added for components
- tests for Lifecycle Hooks were removed
- not usable code was removed
- the logic was removed from tests

--- a/angular-video-course/src/app/app.component.html
+++ b/angular-video-course/src/app/app.component.html
@@ -1,4 +1,4 @@
-<vc-header></vc-header>
-<vc-breadcrumbs></vc-breadcrumbs>
-<router-outlet></router-outlet>
-<vc-footer></vc-footer>
+<vc-header data-test-id="vc-header"></vc-header>
+<vc-breadcrumbs data-test-id="vc-breadcrumbs"></vc-breadcrumbs>
+<router-outlet data-test-id="vc-content"></router-outlet>
+<vc-footer data-test-id="vc-footer"></vc-footer>
