--- a/angular-video-course/src/app/core/header/header.component.html
+++ b/angular-video-course/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <vc-logo></vc-logo>
+  <vc-logo data-test-id="vc-logo"></vc-logo>
   <div class="spacer"></div>
-  <vc-user-login></vc-user-login>
+  <vc-user-login data-test-id="vc-user-login"></vc-user-login>
 </header>
