--- a/angular-video-course/src/app/core/courses-page/course/course.component.html
+++ b/angular-video-course/src/app/core/courses-page/course/course.component.html
@@ -1,8 +1,8 @@
 <div class="course-box">
-  <h3>{{ course.titleOfCourse }}</h3>
+  <h3 data-test-id="course-title">{{ course.titleOfCourse }}</h3>
   <h4>
     <span>{{ course.duration }}</span>
-    &nbsp;
+    <span> | </span>
     <span>{{ course.creationDate  | date: 'mediumDate'}}</span>
   </h4>
   <p>
