feat: directives and pipes
- custom status directive for courses is created
- ngIf added for no data message
- functionality for topRate is added (ngClass)
- uppercase built-in pipe is added for course name
- custom duration pipe is created
- date built-in pipe is added for course date
- filter for courses is added for search field

--- a/angular-video-course/src/app/core/courses-page/course/course.component.html
+++ b/angular-video-course/src/app/core/courses-page/course/course.component.html
@@ -1,7 +1,11 @@
-<div class="course-box">
-  <h3 data-test-id="course-title">{{ course.titleOfCourse }}</h3>
+<div [ngClass]="course.topRate ? 'course-box top-rate' : 'course-box'" [vcCourseFreshness]="course.creationDate">
+  <h3 data-test-id="course-title">
+    Video Course {{ courseIndex + 1 }}
+    {{ course.titleOfCourse | uppercase }}
+    <span>&hearts;</span>
+  </h3>
   <h4>
-    <span>{{ course.duration }}</span>
+    <span>{{ course.duration | courseDuration }}</span>
     <span> | </span>
     <span>{{ course.creationDate  | date: 'mediumDate'}}</span>
   </h4>
