--- a/angular-video-course/src/app/core/courses-page/courses-page.component.scss
+++ b/angular-video-course/src/app/core/courses-page/courses-page.component.scss
@@ -3,3 +3,12 @@
   justify-content: flex-end;
   padding-top: 10px;
 }
+
+.no-data-message {
+  padding: 20px 10px;
+  margin: 10px 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  border: 1px solid #333;
+}
